--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "obs/esdk-obs-php",
 	"description" : "OBS PHP SDK",
-	"license":"Apache License 2.0",
+	"license":"Apache-2.0",
 	"version":"3.0.2",
 	"require" : {
 		"php" : ">=5.6.0",
