提交华为obs但经过很多天未处理pull Request，因开发需要不得已只能fork一份自行处理
提交华为obs但经过很多天未处理pull Request，因开发需要不得已只能fork一份自行处理

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "obs/esdk-obs-php",
+	"name" : "non0/huaweicloud-obs",
 	"description" : "OBS PHP SDK",
 	"license":"Apache-2.0",
 	"version":"3.0.2",
