--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,17 @@
 {
-	"name" : "obs/esdk-obs-php",
-	"description" : "OBS PHP SDK",
+	"name" : "non0/huaweicloud-obs-sdk",
+	"description" : "华为云对象储存SDK FOR PHP",
 	"license":"Apache-2.0",
-	"version":"3.0.2",
 	"require" : {
 		"php" : ">=5.6.0",
-		"guzzlehttp/guzzle" : "6.3.0",
-		"guzzlehttp/psr7" : "1.4.2",
-		"guzzlehttp/promises" : "1.3.1",
-		"psr/http-message" : "1.0.1",
-		"monolog/monolog" : "1.23.0",
-		"psr/log" : "1.0.2"
+		"guzzlehttp/guzzle" : "^6.3.0",
+		"guzzlehttp/psr7" : "^1.4.2",
+		"guzzlehttp/promises" : "^1.3.1",
+		"psr/http-message" : "^1.0.1",
+		"monolog/monolog" : "^1.23.0",
+		"psr/log" : "^1.0.2"
 	},
-	
+
 	"keywords" :["obs", "php"],
 	"autoload": {
 		"psr-4": {
