--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"guzzlehttp/promises" : "1.3.1",
 		"psr/http-message" : "1.0.1",
 		"monolog/monolog" : "1.23.0",
-		"psr/log" : "1.0.2"
+		"psr/log" : "~1.0"
 	},
 	
 	"keywords" :["obs", "php"],
