--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-	"name" : "obs/esdk-obs-php",
-	"description" : "OBS PHP SDK",
+	"name" : "yxs/huaweicloud-sdk-php-obs",
+	"description" : "huaweicloud-sdk-php-obs",
 	"license":"Apache-2.0",
 	"version":"3.21.6",
 	"require" : {
 		"php" : ">=5.6.0",
 		"guzzlehttp/guzzle" : "^6.2 || ^7.0",
-		"guzzlehttp/psr7" : "^1.4.2",
+		"guzzlehttp/psr7" : "^1.4.2 || ^2.0",
 		"guzzlehttp/promises" : "^1.3.1",
 		"psr/http-message" : "^1.0.1",
 		"monolog/monolog" : "^1.22 || ^2.0",
