--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"php" : ">=5.6.0",
 		"guzzlehttp/guzzle" : "^6.3.0 || ^7.0",
 		"guzzlehttp/psr7" : "^1.4.2 || ^2.0",
-		"monolog/monolog" : "^1.23.0 || ^2.0",
+		"monolog/monolog" : "^1.23.0 || ^2.0 || ^3.0",
         "psr/http-message": "^1.0"
 	},
 	
