--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,12 @@
 	"license":"Apache-2.0",
 	"version":"3.23.11",
 	"require" : {
-		"php" : ">=8.1.0",
+		"php" : ">=5.6.0",
 		"guzzlehttp/guzzle" : "^6.3.0 || ^7.0",
 		"guzzlehttp/psr7" : "^1.4.2 || ^2.0",
 		"monolog/monolog" : "^1.23.0 || ^2.0",
-        "psr/http-message": "^1.0",
-		"pader/amphp-guzzle-handler": "dev-main"
+        "psr/http-message": "^1.0"
 	},
-
 	"keywords" :["obs", "php"],
 	"autoload": {
 		"psr-4": {
