--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
 	"name" : "obs/esdk-obs-php",
 	"description" : "OBS PHP SDK",
 	"license":"Apache-2.0",
-	"version":"3.23.11",
+	"version":"3.24.9",
 	"require" : {
 		"php" : ">=5.6.0",
 		"guzzlehttp/guzzle" : "^6.3.0 || ^7.0",
 		"guzzlehttp/psr7" : "^1.4.2 || ^2.0",
-		"monolog/monolog" : "^1.23.0 || ^2.0",
+		"monolog/monolog" : "^1.23.0 || ^2.0 || ^3.0",
         "psr/http-message": "^1.0"
 	},
 	
